⛸👩‍👩‍👦 Updated with Glitch more songs about buildings and food :-)

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,5 @@ title: "Roland's Restaurant Review Site"
 <html lang="en"> 
 <head>  <meta charset="utf-8">  
 <title>{{ title }}</title> </head> <body>  <h1>{{ title }}</h1>  
-  <a href="reviews">1 page of reviews for ever</a>
+  <a href="reviews">1 page of reviews forever :-) !</a>
 </body> </html>
